update cert tests to deploy new mount script and make it executable

--- a/jobs/cephdriver/templates/install.erb
+++ b/jobs/cephdriver/templates/install.erb
@@ -79,4 +79,8 @@ mkdir -p $VOL_DIR
 chown vcap:vcap $VOL_DIR
 
 echo "Installed ceph-fuse"
+
+# make sure the mount scripts is executable
+chmod +x /var/vcap/jobs/cephdriver/scripts/mount.sh
+
 exit 0
