--- a/jobs/cephdriver/templates/install.erb
+++ b/jobs/cephdriver/templates/install.erb
@@ -53,7 +53,7 @@ elif [ "$codename" == "xenial" ]; then
   (
   flock -x 200
   dpkg  --force-confdef -i \
-  /var/vcap/packages/cephfuse/ceph-fuse_10.2.9-0ubuntu0.16.04.1_amd64.deb \
+  /var/vcap/packages/cephfuse/ceph-fuse_10.2.10-1xenial_amd64.deb \
   /var/vcap/packages/cephfuse/libunwind8_1.1-4.1_amd64.deb \
   /var/vcap/packages/cephfuse/libtcmalloc-minimal4_2.4-0ubuntu5.16.04.1_amd64.deb \
   /var/vcap/packages/cephfuse/libgoogle-perftools4_2.4-0ubuntu5.16.04.1_amd64.deb \
